# scrcpy-mobile-src

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adb_bridge_jni.cpp  process_porting.cpp  process_porting.h
app/src/main/java/com/mobile/scrcpy/android/app/: MainActivity.kt  ScreenRemoteApp.kt
app/src/main/java/com/mobile/scrcpy/android/common/: ApiCompatHelper.kt  BilingualTexts.kt  Constants.kt  HapticFeedbackManager.kt  LanguageManager.kt  LogManager.kt  TTSManager.kt
app/src/main/java/com/mobile/scrcpy/android/core/adb/: AdbBridge.kt  AdbConnectionManager.kt  SocketForwarder.kt
app/src/main/java/com/mobile/scrcpy/android/core/common/: Constants.kt
app/src/main/java/com/mobile/scrcpy/android/core/i18n/: AdbTexts.kt  CodecTexts.kt  CommonTexts.kt  EventBusTexts.kt  LogTexts.kt  RemoteTexts.kt  SessionTexts.kt  SettingsTexts.kt  TextPair.kt
app/src/main/java/com/mobile/scrcpy/android/service/: ScrcpyForegroundService.kt
app/src/main/res/drawable/: floating_menu_bg.xml  ic_menu.xml  ic_recent.xml
app/src/main/res/layout/: floating_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v27/: themes.xml
app/src/main/res/values-night-v29/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
(+262 files in other folders)
